@@ -57,6 +57,7 @@ $messages['en'] = array(
 	'sinfo-extension-information'	=> 'Extension Information',
 	'sinfo-information-disabled'	=> 'We sorry, this information is disabled',
 	'sinfo-installation-directory'	=> 'Installation Directory',
+	'sinfo-internal-css'		=> 'Internal stylesheet',
 	'sinfo-is-installed'		=> 'is installed',
 	'sinfo-is-installed-tag'	=> 'is installed (tag \'\'\'&lt;$1&gt;\'\'\')',
 	'sinfo-links'			=> 'Links',
@@ -130,6 +131,7 @@ $messages['es'] = array(
 	'sinfo-extension-information'	=> 'Información de la Extensión',
 	'sinfo-information-disabled'	=> 'Lo sentimos, esta imformanción se encuentra deshabilitada.',
 	'sinfo-installation-directory'	=> 'Directorio de Installación',
+	'sinfo-internal-css'		=> 'Hoja de estilo interna',
 	'sinfo-is-installed'		=> 'está instalado',
 	'sinfo-is-installed-tag'	=> 'está instalado (identificador \'\'\'&lt;$1&gt;\'\'\')',
 	'sinfo-links'			=> 'Enlaces',
